--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
 		"typescript": "5.8.3",
 		"vite": "7.0.2",
 		"vitest": "3.2.4"
-	}
+	},
+	"engines": {
+  		"node": "24.4.1"
+	},
+	"packageManager": "npm@11.4.2"
 }
