--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         if: ${{ steps.get_next_version.outputs.hasNextVersion == 'true' }}
         uses: actions/setup-node@v4
         with:
-          node-version: 23.x
+          node-version-file: package.json
 
       - name: Install dependencies
         if: ${{ steps.get_next_version.outputs.hasNextVersion == 'true' }}
