--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
 		"@biomejs/biome": "2.1.2",
 		"@tanstack/react-router-devtools": "1.130.2",
 		"@tanstack/router-plugin": "1.130.2",
+		"@testing-library/dom": "10.4.1",
+		"@testing-library/jest-dom": "6.6.4",
+		"@testing-library/react": "16.3.0",
 		"@types/react": "19.1.8",
 		"@types/react-dom": "19.1.6",
 		"@vitejs/plugin-react": "4.7.0",
+		"global-jsdom": "26.0.0",
+		"jsdom": "26.1.0",
 		"typescript": "5.8.3",
 		"vite": "7.0.6",
 		"vitest": "3.2.4"
