--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ node_modules
 dist
 build
 
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
 # IDE
 .vscode
 .idea
