--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-	"name": "react-starter",
-	"version": "0.1.7",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc -b && vite build",
-		"analyze": "biome check",
-		"fix:analyze": "biome check --write",
-		"test": "vitest --run --bail 1"
-	},
-	"dependencies": {
-		"@tanstack/react-form": "1.19.3",
-		"@tanstack/react-query": "5.85.6",
-		"@tanstack/react-router": "1.131.31",
-		"react": "19.1.1",
-		"react-dom": "19.1.1",
-		"zod": "4.1.5"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "2.2.2",
-		"@tanstack/react-router-devtools": "1.131.31",
-		"@tanstack/router-plugin": "1.131.31",
-		"@testing-library/dom": "10.4.1",
-		"@testing-library/jest-dom": "6.8.0",
-		"@testing-library/react": "16.3.0",
-		"@types/react": "19.1.12",
-		"@types/react-dom": "19.1.9",
-		"@vitejs/plugin-react": "5.0.2",
-		"global-jsdom": "26.0.0",
-		"jsdom": "26.1.0",
-		"typescript": "5.9.2",
-		"vite": "7.1.4",
-		"vitest": "3.2.4"
-	},
-	"engines": {
-		"node": "24.4.1"
-	},
-	"packageManager": "npm@11.4.2"
+  "name": "react-starter",
+  "version": "0.1.7",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "analyze": "biome check",
+    "fix:analyze": "biome check --write",
+    "test": "vitest --run --bail 1 && playwright test --max-failures=1"
+  },
+  "dependencies": {
+    "@tanstack/react-form": "1.19.3",
+    "@tanstack/react-query": "5.85.6",
+    "@tanstack/react-router": "1.131.31",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "zod": "4.1.5"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.2.2",
+    "@playwright/test": "1.55.0",
+    "@tanstack/react-router-devtools": "1.131.31",
+    "@tanstack/router-plugin": "1.131.31",
+    "@testing-library/dom": "10.4.1",
+    "@testing-library/jest-dom": "6.8.0",
+    "@testing-library/react": "16.3.0",
+    "@types/node": "24.3.1",
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9",
+    "@vitejs/plugin-react": "5.0.2",
+    "global-jsdom": "26.0.0",
+    "jsdom": "26.1.0",
+    "typescript": "5.9.2",
+    "vite": "7.1.4",
+    "vitest": "3.2.4"
+  },
+  "engines": {
+    "node": "24.4.1"
+  },
+  "packageManager": "npm@11.4.2"
 }
