--- a/.github/workflows/lint-pull-request-title.yml
+++ b/.github/workflows/lint-pull-request-title.yml
@@ -7,6 +7,10 @@ on:
       - edited
       - synchronize
 
+concurrency:
+  group: lint_pull_request_title-pr-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
+
 jobs:
   lint-pull-request-title:
     runs-on: ubuntu-latest
