--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -2,6 +2,10 @@ name: QA
 
 on: pull_request
 
+concurrency:
+  group: qa-pr-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
+
 jobs:
   qa:
     runs-on: ubuntu-latest
@@ -14,6 +18,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: package.json
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
