--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"analyze": "biome check",
+		"analyze": "biome ci",
 		"fix:analyze": "biome check --write",
 		"test": "vitest --run --bail 1 && playwright test --max-failures=1"
 	},
