--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"analyze": "biome check",
-		"fix:analyze": "biome check --write",
-		"test": "vitest --run --bail 1"
+		"analyze": "biome ci --error-on-warnings .",
+		"fix:analyze": "biome check --write .",
+		"test": "vitest --run --bail 1 && playwright test --max-failures=1"
 	},
 	"dependencies": {
 		"@tanstack/react-form": "1.19.3",
@@ -20,11 +20,13 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.2",
+		"@playwright/test": "1.55.0",
 		"@tanstack/react-router-devtools": "1.131.31",
 		"@tanstack/router-plugin": "1.131.31",
 		"@testing-library/dom": "10.4.1",
 		"@testing-library/jest-dom": "6.8.0",
 		"@testing-library/react": "16.3.0",
+		"@types/node": "24.3.1",
 		"@types/react": "19.1.12",
 		"@types/react-dom": "19.1.9",
 		"@vitejs/plugin-react": "5.0.2",
