chore: biome ignores playwright files

--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,11 @@
 			"!.turbo",
 			"!.netlify",
 			"!.tanstack",
-			"!**/routeTree.gen.ts"
+			"!**/routeTree.gen.ts",
+			"!test-results",
+			"!playwright-report",
+			"!blob-report",
+			"!playwright/.cache"
 		]
 	}
 }
